# opengl-render

./: CMakeLists.txt  README.rst
src/: camera.cpp  camera.hpp  main.cpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  scene.cpp  scene.hpp  window.cpp  window.hpp
src/lib/: glew.cpp  glew.hpp  glfw.cpp  glfw.hpp  opengl.cpp  opengl.hpp
src/opengl/: buffer.cpp  buffer.hpp  errors.cpp  errors.hpp  object.hpp  shaders.cpp  shaders.hpp
src/shaders/: fragment.glsl  vertex.glsl
